--- a/_tools/config.ini
+++ b/_tools/config.ini
@@ -4,6 +4,7 @@ id=repository.tantrumtv
 version=1.2.0
 author=MuadDib
 summary=Tantrum.TV Official Repository
+excludes=.psd,.pyo,.pyc,.gitignore,.DS_Store
 description=Tantrum.TV Official Repository
 
 [locations]
