--- a/_tools/config.ini
+++ b/_tools/config.ini
@@ -4,7 +4,7 @@ id=repository.tantrumtv
 version=1.2.0
 author=MuadDib
 summary=Tantrum.TV Official Repository
-excludes=.psd,.pyo,.pyc,.gitignore,.DS_Store
+excludes=.psd,.pyo,.pyc,.gitignore,.DS_Store,.otf,.ttf
 description=Tantrum.TV Official Repository
 
 [locations]
